# ChangeLog for dev-python/gst-python
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/gst-python/ChangeLog,v 1.52 2009/06/08 08:39:31 aballier Exp $

  08 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  gst-python-0.10.15-r1.ebuild:
  keyword ~x86-fbsd

  14 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  gst-python-0.10.15-r1.ebuild:
  Insert python_need_rebuild to pkg_postinst wrt #244575.

*gst-python-0.10.15-r1 (14 May 2009)

  14 May 2009; Samuli Suominen <ssuominen@gentoo.org>
  -gst-python-0.10.15.ebuild, +gst-python-0.10.15-r1.ebuild:
  Revision bump to correctly handle bytecompiling and autotools.

*gst-python-0.10.15 (13 May 2009)

  13 May 2009; Olivier Crête <tester@gentoo.org>
  +gst-python-0.10.15.ebuild:
  Version bump

  09 Dec 2008; <ssuominen@gentoo.org> gst-python-0.10.13.ebuild:
  gst-python needs >= gstreamer-0.10.21 but configure.ac doesn't check for
  it wrt #250358.

*gst-python-0.10.13 (05 Dec 2008)

  05 Dec 2008; <ssuominen@gentoo.org> +gst-python-0.10.13.ebuild:
  Version bump.

  22 Nov 2008; Hanno Boeck <hanno@gentoo.org> gst-python-0.10.12.ebuild:
  Does not require pygtk, can alternatively use pygobect.

  08 Aug 2008; Markus Meier <maekke@gentoo.org> gst-python-0.10.12.ebuild:
  x86 stable, bug #232054

  07 Aug 2008; Tobias Klausmann <klausman@gentoo.org>
  gst-python-0.10.12.ebuild:
  Stable on alpha, bug #232054

  31 Jul 2008; Raúl Porcel <armin76@gentoo.org> gst-python-0.10.12.ebuild:
  ia64/sparc stable wrt #232054

  01 Aug 2008; Brent Baude <ranger@gentoo.org> gst-python-0.10.12.ebuild:
  Marking gst-python-0.10.12 ppc64 stable for bug 232054

  30 Jul 2008; Brent Baude <ranger@gentoo.org> gst-python-0.10.12.ebuild:
  Marking gst-python-0.10.12 ppc stable for bug 232054

  26 Jul 2008; Olivier Crête <tester@gentoo.org> gst-python-0.10.12.ebuild:
  Stable on amd64, bug #232054

*gst-python-0.10.12 (29 Jun 2008)
