@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/gst-python/gst-python-0.10.13.ebuild,v 1.2 2008/12/09 11:41:52 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/gst-python/gst-python-0.10.13.ebuild,v 1.3 2009/06/18 12:37:35 dagger Exp $
 
 NEED_PYTHON=2.4
 
